Feat : user 제재 경고, 정지